rgbds-0.6.1/test/asm/syntax-error-after-syntax-error.asm
MACRO mac
	println "got {d:_NARG} args"
ENDM
	mac
	mac 42
notmac
mac
mac 42
mac::
mac ::
